fix code overflow

--- a/src/components/Code/styles.modules.scss
+++ b/src/components/Code/styles.modules.scss
@@ -13,7 +13,11 @@
 
 .code {
   color: white;
-  white-space: pre;
+  white-space: -moz-pre-wrap; /* Firefox */
+  white-space: -pre-wrap; /* ancient Opera */
+  white-space: -o-pre-wrap; /* newer Opera */
+  white-space: pre-wrap; /* Chrome; W3C standard */
+  word-wrap: break-word; /* IE */
 }
 
 .copy {
